--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+
+[[bin]]
+name = "html_templating_bin"
+path = "src/main.rs"
+
+[lib]
+name = "html_templating_lib"
+path = "src/lib/lib.rs"
