--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,16 +19,19 @@ jobs:
       - name: Run tests
         run: cargo test --verbose
       - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Extract metadata (tags, labels) for Docker
+        if: github.event_name != 'pull_request'
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
           images: stewedharry/html_templating
       - name: Build and push Docker image
+        if: github.event_name != 'pull_request'
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
